--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -1,24 +1,26 @@
 ---
 import Card from "./Card/index.astro";
+const subjects = ['Software Developement', 'Computer Science', 'Artificial Intelligence', 'Data Analytics, Life Sciences']
 ---
 
 <Card colSpan="md:col-span-1" rowSpan="md:row-span-6" title="About me">
   <div class="flex flex-col gap-2">
     <p class="text-sm font-light">
-      Hi, I'm Gianmarco, a front-end software developer from Italy.
+      Hi, Ich bin Marcel und studieren an der Technischen Hochschule Ingolstadt im 6. Semester Bio- und Medizininformatik
       <br />
-       My primary tools of choice includes:
-      <ul class="list-disc list-inside">
-        <li>JavaScript</li>
-        <li>React</li>
-        <li>Solidjs</li>
-        <li>Astro</li>
-        <li>svelte</li>
-        <li>Nodejs</li>
+       Der Schwerpunkt meines Studiums sind unter anderem
+      <ul>
+        <ul class="list-disc list-inside">
+          <li>JavaScript</li>
+          <li>React</li>
+          <li>Solidjs</li>
+          <li>Astro</li>
+          <li>svelte</li>
+          <li>Nodejs</li>
       </ul>
     </p>
     <p class="text-sm font-light">
-      Beyond coding, I'm passionate about design and 3D modeling and traveling.
+      coding, I'm passionate about design and 3D modeling and traveling.
       An unusual hobby of mine is collecting vintage passports, they're
       interesting pieces of history to me.
     </p>
