--- a/src/components/ContactsCard.astro
+++ b/src/components/ContactsCard.astro
@@ -12,8 +12,8 @@ import { LINKS } from "../lib/constants";
     </header>
     <address class="flex flex-col mt-4">
       <h2 class="text-gray-500">Contact Details</h2>
-      <p>cavallogianmarco@gmail.com</p>
-      <p>Italy</p>
+      <p>marcel.nhan@outlook.com</p>
+      <p>Deutschland</p>
     </address>
     <div class="flex flex-col mt-4 w-fit">
       <h2 class="text-gray-500">Socials</h2>
