--- a/src/components/IntroCard.astro
+++ b/src/components/IntroCard.astro
@@ -12,9 +12,7 @@ import Tooltip from "./Tooltip/index";
       <div class="flex flex-col h-full">
         <h6 class="text-sm font-light m-0 text-gray-500">welcome</h6>
         <p class="m-0 font-light text-xl">
-          Hi, I'm <b class="font-bold">Gianmarco Cavallo</b>, a software
-          developer with strong focus on the user experience, animations and
-          micro interactions
+          Hi, ich bin <b class="font-bold">Marcel Nhan</b>, ein Student der Bio- und Medizininformatik an der Technischen Hochschule Ingolstadt
         </p>
       </div>
       <div class="flex gap-4">
