--- a/src/layouts/LayoutBlogPost.astro
+++ b/src/layouts/LayoutBlogPost.astro
@@ -14,8 +14,8 @@ const { frontmatter } = Astro.props;
 ---
 
 <BasicLayout
-  title="Gianmarco Cavallo - Blog"
-  description="Software developer with strong focus on the user experience animations and micro interactions"
+  title="News"
+  description="test"
 >
   <main class="mx-auto max-w-3xl w-full h-screen p-8 text-neutral-100">
     <a
