--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,8 +32,8 @@ import Globe from "../components/Globe";
 </script>
 
 <Layout
-  title="Gianmarco Cavallo - Frontend Developer"
-  description="Software developer with strong focus on the user experience animations and micro interactions"
+  title="Marcel Nhan"
+  description="Student der Bio- und Medizininformatik"
 >
   <main
     class="text-white m-auto p-2 grid gap-2 max-w-6xl overflow-hidden relative w-full sm:p-4 sm:gap-2 md:grid-cols-2 md:gap-3 md:p-6 lg:h-screen lg:grid-rows-8 lg:grid-cols-4 lg:gap-4 lg:max-h-[800px]"
@@ -45,13 +45,13 @@ import Globe from "../components/Globe";
     <Card
       colSpan="md:col-span-1"
       rowSpan="md:row-span-2"
-      title="Blog"
-      href="/blog"
+      title="Aktuelle Projekte"
+      href="/Projekte"
     />
     <Card
       colSpan="md:col-span-1"
       rowSpan="md:row-span-1"
-      title="Countries I visited"
+      title="Countries"
       href="travel"
       colorText="text-neutral-900"
     >
@@ -62,11 +62,11 @@ import Globe from "../components/Globe";
     <Now />
     <Card colSpan="md:col-span-1" rowSpan="md:row-span-1">
       <p class="text-xs">
-        © 2023 · Crafted with ♥️ using <a
+        © 2023 · Build with astro.js <a
           href="https://astro.build/"
           target="_blank"
-          class="text-red-500">Astro</a
-        > by Gianmarco.
+       
+        >
       </p>
     </Card>
   </main>
