--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -1,12 +1,12 @@
 ---
 import Card from "./Card/index.astro";
-const subjects = ['Software Developement', 'Computer Science', 'Artificial Intelligence', 'Data Analytics, Life Sciences']
+const subjects = ['Software Developement', 'Computer Science', 'Artificial Intelligence', 'Data Analytics, Life Sciences'] // nachtragen als const array
 ---
 
 <Card colSpan="md:col-span-1" rowSpan="md:row-span-6" title="About me">
   <div class="flex flex-col gap-2">
     <p class="text-sm font-light">
-      Hi, Ich bin Marcel und studieren an der Technischen Hochschule Ingolstadt im 6. Semester Bio- und Medizininformatik
+      Hi, Ich bin Marcel und studiere an der Technischen Hochschule Ingolstadt im 6. Semester Bio- und Medizininformatik
       <br />
        Der Schwerpunkt meines Studiums sind unter anderem
       <ul>
@@ -20,14 +20,8 @@ const subjects = ['Software Developement', 'Computer Science', 'Artificial Intel
       </ul>
     </p>
     <p class="text-sm font-light">
-      coding, I'm passionate about design and 3D modeling and traveling.
-      An unusual hobby of mine is collecting vintage passports, they're
-      interesting pieces of history to me.
+    In meiner Freizeit treibe ich gerne Sport, gehe mit Freunden raus. Zu meinen größten Hobbys gehören Sport und Kochen, insbesondere die japanische und italienische Küche.
     </p>
-    <p class="text-sm font-light">
-      While I have some preferred tools, I always choose the best one for the
-      job, even if it's not on my usual list. My goal is to find the right
-      solution for each project.
-    </p>
+  
   </div>
 </Card>
