--- a/src/components/ContactsCard.astro
+++ b/src/components/ContactsCard.astro
@@ -13,7 +13,7 @@ import { LINKS } from "../lib/constants";
     <address class="flex flex-col mt-4">
       <h2 class="text-gray-500">Contact Details</h2>
       <p>marcel.nhan@outlook.com</p>
-      <p>Deutschland</p>
+      <p>Germany</p>
     </address>
     <div class="flex flex-col mt-4 w-fit">
       <h2 class="text-gray-500">Socials</h2>
