--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,7 +13,7 @@ const { title, description, page } = Astro.props;
 <BasicLayout title={title} description={description}>
   <div
     slot="loader"
-    class="loader bg-lightgray text-dark text-3xl font-black uppercase flex justify-center items-center w-screen h-screen z-50 fixed top-0 bottom-0 right-0 left-0"
+    class="lightgray text-dark text-3xl font-black uppercase flex justify-center items-center w-screen h-screen z-50 fixed top-0 bottom-0 right-0 left-0"
   >
   </div>
   <slot />
