--- a/src/components/Now.astro
+++ b/src/components/Now.astro
@@ -1,6 +1,6 @@
 ---
 import Card from "./Card/index.astro";
-import Pulse from "./Pulse.astro"; //pulisierender grüner Punkt
+import Pulse from "./Pulse.astro"; // Import pulisierender grüner Punkt
 ---
 
 <Card colSpan="md:col-span-1" rowSpan="md:row-span-2">
@@ -13,7 +13,7 @@ import Pulse from "./Pulse.astro"; //pulisierender grüner Punkt
     </div>
     <Pulse />
   </div>
-  <p class="text-xs">Bachelorstundent im 6. Semester</p>
-  <p class="text-xs">Werkstundent bei Siemens Healthineers</p>
-  <p class="text-xs">Co-Founder eines studentischen Startups</p>
+  <p class="text-xs">- Bachelorstundent im 6. Semester</p>
+  <p class="text-xs">- Werkstundent @Siemens Healthineers</p>
+  <p class="text-xs">- Co-Founder eines Startups</p>
 </Card>
