Change to light color theme

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -8,14 +8,19 @@ const subjects = ['Software Developement', 'Computer Science', 'Artificial Intel
     <p class="text-sm font-light">
       Hi, Ich bin Marcel und studiere an der Technischen Hochschule Ingolstadt im 6. Semester Bio- und Medizininformatik
       <br />
-       Der Schwerpunkt meines Studiums sind unter anderem  
+       Die Schwerpunkte meines Studiums sind unter anderem  
       <ul>
-        {subjects.map((subject, index) => (
-          <li ={index}>{subject}</li>
-        ))}
+
+
+          {subjects.map((subject) => (
+            <li ={index}>{subject}</li>
+          ))}
+       
+       
       </ul>
     </p>
     <p class="text-sm font-light">
+      
     In meiner Freizeit treibe ich gerne Sport, gehe mit Freunden raus. Zu meinen größten Hobbys gehören Sport und Kochen, insbesondere die japanische und italienische Küche.
     </p>
   
