--- a/src/components/ContactsCard.astro
+++ b/src/components/ContactsCard.astro
@@ -6,7 +6,7 @@ import { LINKS } from "../lib/constants";
 <Card colSpan="md:col-span-1" rowSpan="md:row-span-4">
   <div class="h-full">
     <header class="flex items-center">
-      <h1 class="text-white text-xl font-bold">
+      <h1 class="text-black text-xl font-bold">
         Let's start working together!
       </h1>
     </header>
@@ -20,15 +20,6 @@ import { LINKS } from "../lib/constants";
       <ul>
         <li>
           <a href={LINKS.linkedin} target="_blank">Linkedin</a>
-        </li>
-        <li>
-          <a href={LINKS.github} target="_blank">Github</a>
-        </li>
-        <li>
-          <a href={LINKS.medium} target="_blank">Medium</a>
-        </li>
-        <li>
-          <a href={LINKS.discord} target="_blank">Discord</a>
         </li>
       </ul>
     </div>
