--- a/src/components/IntroCard.astro
+++ b/src/components/IntroCard.astro
@@ -1,33 +1,32 @@
 ---
 import Card from "./Card/index.astro";
-import Button from "./Button.astro";
 import { LINKS } from "../lib/constants";
 import { Icon } from 'astro-icon/components'
+
+//Imports für images
+import { Image } from 'astro:assets';
+import shsImage from '/src/static/SHS.png';
+import thiImage from '/src/static/thi.png';
 ---
 
 <Card colSpan="md:col-span-3" rowSpan="md:row-span-4">
   <div class="flex w-full h-full">
     <div class="flex flex-col justify-between md:max-h-[300px] gap-4">
       <div class="flex flex-col h-full">
-        <h6 class="text-sm font-light m-0 text-gray-500">welcome</h6>
+å
+        <!--Textformatierung für Willkommenspage-->
+        <h6 class="text-sm font-light m-0 text-gray-500">Willkommen</h6>
         <p class="m-0 font-light text-xl">
           Hi, ich bin <b class="font-bold">Marcel Nhan</b>, ein Student der Bio- und Medizininformatik an der Technischen Hochschule Ingolstadt
         </p>
       </div>
-      <div class="flex gap-4">
-        <a href={LINKS.github} aria-label="github profile" target="_blank">
-          <Button aria-label="github profile">
-            <Icon name="ri:github-fill" class="h-6" />
-            <span class="sr-only">GitHub Profile</span>
-          </Button>
-        </a>
-        <a href={LINKS.linkedin} aria-label="linkeding profile" target="_blank">
-          <Button aria-label="linkedin profile">
-            <Icon name="ri:linkedin-box-fill" class="h-6" />
-            <span class="sr-only">Linkedin Profile</span>
-          </Button>
-        </a>
+        <!--THI Bild auf der linken Seite-->
+        <Image src={shsImage} alt="test"/>
         
-      </div>
     
+        <!--SHS Bild auf der rechten Seite -->
+        <Image src={thiImage} alt=" test" />
+
+
+      
 </Card>
