--- a/src/components/ContactsCard.astro
+++ b/src/components/ContactsCard.astro
@@ -1,13 +1,14 @@
 ---
 import Card from "./Card/index.astro";
-import { LINKS } from "../lib/constants";
+
+//Links nachtragen
 ---
 
 <Card colSpan="md:col-span-1" rowSpan="md:row-span-4">
   <div class="h-full">
     <header class="flex items-center">
       <h1 class="text-black text-xl font-bold">
-        Let's start working together!
+        Kontaktdaten
       </h1>
     </header>
     <address class="flex flex-col mt-4">
@@ -17,11 +18,6 @@ import { LINKS } from "../lib/constants";
     </address>
     <div class="flex flex-col mt-4 w-fit">
       <h2 class="text-gray-500">Socials</h2>
-      <ul>
-        <li>
-          <a href={LINKS.linkedin} target="_blank">Linkedin</a>
-        </li>
-      </ul>
     </div>
   </div>
 </Card>
