--- a/src/components/Now.astro
+++ b/src/components/Now.astro
@@ -8,12 +8,13 @@ import Pulse from "./Pulse.astro"; // Import pulisierender grüner Punkt
     <div class="flex flex-col">
       <h2>Aktuelle Beschäftigung</h2>
       <a href="https://sive.rs/nowff" target="_blank">
-        <span class="text-xs text-gray-500 cursor-pointer">what's that ?</span>
+       
       </a>
     </div>
     <Pulse />
   </div>
   <p class="text-xs">- Bachelorstundent im 6. Semester</p>
   <p class="text-xs">- Werkstundent @Siemens Healthineers</p>
-  <p class="text-xs">- Co-Founder eines Startups</p>
+  <p class="text-xs">- Co-Founder eines Startups (Wepato)</p>
+  <p class="text-xs">- Studienbotschafter @THI</p>
 </Card>
