--- a/src/components/IntroCard.astro
+++ b/src/components/IntroCard.astro
@@ -1,37 +1,55 @@
 ---
 import Card from "./Card/index.astro";
-import { LINKS } from "../lib/constants";
-import { Icon } from 'astro-icon/components'
 
 //Imports für images
-import { Image } from 'astro:assets';
-import shsImage from '/src/static/SHSP.png';
-import thiImage from '/src/static/thi.png';
-import wepatoImage from '/src/static/WEPATO.jpg';
+import { Image } from "astro:assets";
+import shsImage from "/src/static/SHSP.png";
+import thiImage from "/src/static/thi.png";
+import wepatoImage from "/src/static/WEPATO.jpg";
 ---
 
 <Card colSpan="md:col-span-3" rowSpan="md:row-span-4">
+  <!--Aufteilung Column/Rows -->
   <div class="flex w-full h-full">
     <div class="flex flex-col justify-between md:max-h-[300px] gap-4">
       <div class="flex flex-col h-full">
-å
         <!--Textformatierung für Willkommenspage-->
         <h6 class="text-sm font-light m-0 text-gray-500">Willkommen</h6>
         <p class="m-0 font-light text-xl">
-          Hi, ich bin <b class="font-bold">Marcel Nhan</b>, ein Student der Bio- und Medizininformatik an der Technischen Hochschule Ingolstadt. 
-          <p>Zurzeit arbeite ich als Werkstudent bei Siemens Healthineers und bin nebenbei Co-Founder eines StartUps im Bereich Eventmanagement</p>
+          Hi, ich bin <b class="font-bold">Marcel Nhan</b>, und studiere Bio-
+          und Medizininformatik
+          <p class="m-0 font light text-m"> 
+            Ich befinde mich im 6. Semester und arbeite zurzeit als Werkstudent für Digitalisierung bei Siemens Healthineers. 
+            Nebenbei bin ich Co-Founder eines Startups im Eventmanagement-Bereich und Studienbotschafter an der Technischen 
+            Hochschule Ingolstadt. In letzterer Position berate und unterstütze ich Studieninteressierte in Form von Campusführungen, 
+            Beratung bei externen und internen Veranstaltungen und gebe ihnen einen Einblick in das Fach der Bio- und Medizininformatik.
         </p>
       </div>
 
-      <div class="flex gap-12">
+      <div class="flex justify-center gap-12">
         <!--SHS Bild auf der linken Seite-->
-        <Image src={shsImage} alt="test" class="logo-image" style={{ width: '300px', height: '100' }}/>
+        <Image
+          src={shsImage}
+          alt="SHS"
+          class="logo-image"
+          style={{ width: "35%", height: "auto" }}
+        />
 
         <!--THI Bild in der Mitte -->
-        <Image src={thiImage} alt="test" class="logo-image" style={{ width: '170px', height: 'auto' }}/>
+        <Image
+          src={thiImage}
+          alt="THI"
+          class="logo-image"
+          style={{ width: "20%", height: "auto" }}
+        />
 
         <!-- WEPATO Bild auf der rechten Seite -->
-        <Image src={wepatoImage} alt="test" class="logo-image" style={{width: '150px', height: 'auto'}}/>
+        <Image
+          src={wepatoImage}
+          alt="WEPATO"
+          class="logo-image"
+          style={{ width: "15%", height: "auto" }}
+        />
       </div>
     </div>
   </div>
