--- a/src/components/Now.astro
+++ b/src/components/Now.astro
@@ -6,7 +6,7 @@ import Pulse from "./Pulse.astro"; // Import pulisierender grüner Punkt
 <Card colSpan="md:col-span-1" rowSpan="md:row-span-2">
   <div class="flex justify-between w-full items-start mb-2">
     <div class="flex flex-col">
-      <h2>Aktuelle Beschäftigung</h2>
+      <h2>Auf einen Blick</h2>
       <a href="https://sive.rs/nowff" target="_blank">
        
       </a>
@@ -14,6 +14,7 @@ import Pulse from "./Pulse.astro"; // Import pulisierender grüner Punkt
     <Pulse />
   </div>
   <p class="text-xs">- Bachelorstundent im 6. Semester</p>
+  <p class="text-xs">- Bio- und Medizininformatik (B. Sc.)</p>
   <p class="text-xs">- Werkstundent @Siemens Healthineers</p>
   <p class="text-xs">- Co-Founder eines Startups (Wepato)</p>
   <p class="text-xs">- Studienbotschafter @THI</p>
