--- a/src/components/TimeZoneCard.astro
+++ b/src/components/TimeZoneCard.astro
@@ -1,11 +1,12 @@
 ---
-import { getCurrentTimeInItaly, formatTimeForItaly } from "../lib/helpers";
+//import Funktionen für Uhrzeit+Konvertierung
+import { getCurrentTimeGermany, formatTimeGermany } from "../lib/helpers";
 import Card from "./Card/index.astro";
 ---
 
 <script>
   import { onCleanup, onMount } from "solid-js";
-  import { formatTimeForItaly } from "../lib/helpers";
+  import { formatTimeGermany } from "../lib/helpers";
 
   let interval: ReturnType<typeof setInterval>;
 
@@ -14,7 +15,7 @@ import Card from "./Card/index.astro";
     const now = new Date();
 
     if (timeDisplay) {
-      timeDisplay.textContent = formatTimeForItaly(now);
+      timeDisplay.textContent = formatTimeGermany(now);
       timeDisplay.setAttribute("datetime", now.toISOString());
     }
   }
@@ -34,6 +35,6 @@ import Card from "./Card/index.astro";
     id="timeDisplay"
     class="text-2xl xl:text-5xl xl:whitespace-nowrap w-50 xl:w-100 h-[calc(100%-28px)] font-serif flex justify-center items-center"
   >
-    {formatTimeForItaly(getCurrentTimeInItaly())}
+    {formatTimeGermany(getCurrentTimeGermany())}
   </time>
 </Card>
